load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/thanos-io/thanos
# gazelle:go_naming_convention import_alias
# gazelle:proto disable

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_repositories.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)

go_library(
    name = "thanos",
    srcs = ["doc.go"],
    importpath = "github.com/thanos-io/thanos",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":thanos",
    visibility = ["//visibility:public"],
)
