load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "thanos_lib",
    srcs = [
        "compact.go",
        "config.go",
        "downsample.go",
        "main.go",
        "query.go",
        "query_frontend.go",
        "receive.go",
        "rule.go",
        "sidecar.go",
        "store.go",
        "tools.go",
        "tools_bucket.go",
    ],
    importpath = "github.com/prometheus/common/cmd/thanos",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cortex/frontend:go_default_library",
        "//internal/cortex/frontend/transport:go_default_library",
        "//internal/cortex/querier/queryrange:go_default_library",
        "//internal/cortex/util/validation:go_default_library",
        "//pkg/alert:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/api/blocks:go_default_library",
        "//pkg/api/query:go_default_library",
        "//pkg/api/rule:go_default_library",
        "//pkg/block:go_default_library",
        "//pkg/block/metadata:go_default_library",
        "//pkg/compact:go_default_library",
        "//pkg/compact/downsample:go_default_library",
        "//pkg/compactv2:go_default_library",
        "//pkg/component:go_default_library",
        "//pkg/dedup:go_default_library",
        "//pkg/discovery/cache:go_default_library",
        "//pkg/discovery/dns:go_default_library",
        "//pkg/errutil:go_default_library",
        "//pkg/exemplars:go_default_library",
        "//pkg/extflag:go_default_library",
        "//pkg/extgrpc:go_default_library",
        "//pkg/extgrpc/snappy:go_default_library",
        "//pkg/extkingpin:go_default_library",
        "//pkg/extprom:go_default_library",
        "//pkg/extprom/http:go_default_library",
        "//pkg/gate:go_default_library",
        "//pkg/httpconfig:go_default_library",
        "//pkg/info:go_default_library",
        "//pkg/info/infopb:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/metadata:go_default_library",
        "//pkg/model:go_default_library",
        "//pkg/prober:go_default_library",
        "//pkg/promclient:go_default_library",
        "//pkg/query:go_default_library",
        "//pkg/queryfrontend:go_default_library",
        "//pkg/receive:go_default_library",
        "//pkg/reloader:go_default_library",
        "//pkg/replicate:go_default_library",
        "//pkg/rules:go_default_library",
        "//pkg/runutil:go_default_library",
        "//pkg/server/grpc:go_default_library",
        "//pkg/server/http:go_default_library",
        "//pkg/server/http/middleware:go_default_library",
        "//pkg/shipper:go_default_library",
        "//pkg/store:go_default_library",
        "//pkg/store/cache:go_default_library",
        "//pkg/store/labelpb:go_default_library",
        "//pkg/store/storepb:go_default_library",
        "//pkg/targets:go_default_library",
        "//pkg/tls:go_default_library",
        "//pkg/tracing:go_default_library",
        "//pkg/tracing/client:go_default_library",
        "//pkg/ui:go_default_library",
        "//pkg/verifier:go_default_library",
        "@com_github_alecthomas_units//:units",
        "@com_github_efficientgo_tools_extkingpin//:extkingpin",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags",
        "@com_github_nytimes_gziphandler//:gziphandler",
        "@com_github_oklog_run//:run",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//config",
        "@com_github_prometheus_prometheus//discovery/file",
        "@com_github_prometheus_prometheus//discovery/targetgroup",
        "@com_github_prometheus_prometheus//model/labels",
        "@com_github_prometheus_prometheus//model/relabel",
        "@com_github_prometheus_prometheus//notifier",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_prometheus_prometheus//rules",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//storage/remote",
        "@com_github_prometheus_prometheus//tsdb",
        "@com_github_prometheus_prometheus//tsdb/agent",
        "@com_github_prometheus_prometheus//tsdb/chunkenc",
        "@com_github_prometheus_prometheus//util/strutil",
        "@com_github_prometheus_prometheus//web/api/v1:api",
        "@com_github_thanos_community_promql_engine//engine",
        "@com_github_thanos_io_objstore//:objstore",
        "@com_github_thanos_io_objstore//client",
        "@com_github_weaveworks_common//user",
        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_text//language",
        "@org_golang_x_text//message",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "thanos",
    embed = [":thanos_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "thanos_test",
    srcs = [
        "main_test.go",
        "query_frontend_test.go",
        "query_test.go",
        "rule_test.go",
        "tools_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":thanos_lib"],
    deps = [
        "//pkg/block:go_default_library",
        "//pkg/block/metadata:go_default_library",
        "//pkg/compact/downsample:go_default_library",
        "@com_github_go_kit_log//:log",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_prometheus//model/labels",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_thanos_io_objstore//:objstore",
    ],
)
