load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "thanos_lib",
    srcs = [
        "compact.go",
        "config.go",
        "downsample.go",
        "main.go",
        "query.go",
        "query_frontend.go",
        "receive.go",
        "rule.go",
        "sidecar.go",
        "store.go",
        "tools.go",
        "tools_bucket.go",
    ],
    importpath = "github.com/thanos-io/thanos/cmd/thanos",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cortex/frontend",
        "//internal/cortex/frontend/transport",
        "//internal/cortex/querier/queryrange",
        "//internal/cortex/util/validation",
        "//pkg/alert",
        "//pkg/api",
        "//pkg/api/blocks",
        "//pkg/api/query",
        "//pkg/api/rule",
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact",
        "//pkg/compact/downsample",
        "//pkg/compactv2",
        "//pkg/component",
        "//pkg/dedup",
        "//pkg/discovery/cache",
        "//pkg/discovery/dns",
        "//pkg/errutil",
        "//pkg/exemplars",
        "//pkg/extflag",
        "//pkg/extgrpc",
        "//pkg/extgrpc/snappy",
        "//pkg/extkingpin",
        "//pkg/extprom",
        "//pkg/extprom/http",
        "//pkg/gate",
        "//pkg/httpconfig",
        "//pkg/info",
        "//pkg/info/infopb",
        "//pkg/logging",
        "//pkg/metadata",
        "//pkg/model",
        "//pkg/prober",
        "//pkg/promclient",
        "//pkg/query",
        "//pkg/queryfrontend",
        "//pkg/receive",
        "//pkg/reloader",
        "//pkg/replicate",
        "//pkg/rules",
        "//pkg/runutil",
        "//pkg/server/grpc",
        "//pkg/server/http",
        "//pkg/server/http/middleware",
        "//pkg/shipper",
        "//pkg/store",
        "//pkg/store/cache",
        "//pkg/store/labelpb",
        "//pkg/store/storepb",
        "//pkg/targets",
        "//pkg/tls",
        "//pkg/tracing",
        "//pkg/tracing/client",
        "//pkg/ui",
        "//pkg/verifier",
        "@com_github_alecthomas_units//:units",
        "@com_github_efficientgo_tools_extkingpin//:extkingpin",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags",
        "@com_github_nytimes_gziphandler//:gziphandler",
        "@com_github_oklog_run//:run",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_common//version",
        "@com_github_prometheus_prometheus//config",
        "@com_github_prometheus_prometheus//discovery/file",
        "@com_github_prometheus_prometheus//discovery/targetgroup",
        "@com_github_prometheus_prometheus//model/labels",
        "@com_github_prometheus_prometheus//model/relabel",
        "@com_github_prometheus_prometheus//notifier",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_prometheus_prometheus//rules",
        "@com_github_prometheus_prometheus//storage",
        "@com_github_prometheus_prometheus//storage/remote",
        "@com_github_prometheus_prometheus//tsdb",
        "@com_github_prometheus_prometheus//tsdb/agent",
        "@com_github_prometheus_prometheus//tsdb/chunkenc",
        "@com_github_prometheus_prometheus//util/strutil",
        "@com_github_prometheus_prometheus//web/api/v1:api",
        "@com_github_thanos_community_promql_engine//engine",
        "@com_github_thanos_io_objstore//:objstore",
        "@com_github_thanos_io_objstore//client",
        "@com_github_weaveworks_common//user",
        "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_text//language",
        "@org_golang_x_text//message",
        "@org_uber_go_automaxprocs//maxprocs",
    ],
)

go_binary(
    name = "thanos",
    embed = [":thanos_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "thanos_test",
    srcs = [
        "main_test.go",
        "query_frontend_test.go",
        "query_test.go",
        "rule_test.go",
        "tools_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":thanos_lib"],
    deps = [
        "//pkg/block",
        "//pkg/block/metadata",
        "//pkg/compact/downsample",
        "//pkg/testutil/e2eutil",
        "@com_github_efficientgo_core//testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_prometheus//model/labels",
        "@com_github_prometheus_prometheus//promql",
        "@com_github_thanos_io_objstore//:objstore",
    ],
)
