load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = ["api.go"],
    importpath = "github.com/prometheus/common/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/extprom/http:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/server/http/middleware:go_default_library",
        "//pkg/tracing:go_default_library",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_nytimes_gziphandler//:gziphandler",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_common//version",
    ],
)

alias(
    name = "go_default_library",
    actual = ":api",
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
    embed = [":api"],
    deps = [
        "//pkg/extprom/http:go_default_library",
        "//pkg/logging:go_default_library",
        "@com_github_go_kit_log//:log",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//route",
    ],
)
