load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "component",
    srcs = ["component.go"],
    importpath = "github.com/prometheus/common/pkg/component",
    visibility = ["//visibility:public"],
    deps = ["//pkg/store/storepb:go_default_library"],
)

alias(
    name = "go_default_library",
    actual = ":component",
    visibility = ["//visibility:public"],
)
