load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = [
        "errors.go",
        "stacktrace.go",
    ],
    importpath = "github.com/thanos-io/thanos/pkg/errors",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":errors",
    visibility = ["//visibility:public"],
)

go_test(
    name = "errors_test",
    srcs = [
        "errors_test.go",
        "stacktrace_test.go",
    ],
    embed = [":errors"],
    deps = ["@com_github_efficientgo_core//testutil"],
)
